# EZDB

./: .gitignore  Cargo.toml  README.md  TODO.md  bad_csv.txt  column_csv.txt  combined.csv  good_csv.txt  large2.csv  perf.data  rustc-ice-2023-12-28T15_28_33-19304.txt  sample_data.txt  sample_output.txt  sorted1.csv  sorted_large.csv  test.rs  test_csv_from_google_sheets2_sorted.csv  test_output_onetime.txt  useful_scripts.txt  users.txt
.cargo/: config.toml
.github/workflows/: rust.yml
EZconfig/: .users
EZconfig/raw_tables/: good_csv-metadata  large_csv-metadata  test-metadata
benches/: my_benchmark.rs
client_libs/: ezdb copy.c  ezdb.c  test
client_libs/C/: BPlusTree.c  BPlusTree.cpp  build.sh  ezdb copy.c  ezdb.c  test
client_libs/odin/: ezdb_client.odin  odin  ols.json
client_libs/odin/ezdb_client/: ezdb_client.odin  function_pointers.odin  odin  structure.odin
client_libs/odin/noise/: main.odin  noise  noise.odin
client_libs/odin/smarray/: smarray.odin
client_libs/odin/tests/: client_lib_tests.odin
logs/: 17.8.2023 - 19;56;48.txt
logs1/: 17.8.2023 - 19;56;48.txt
sqlite_benchmark_comparison/: benchmark  benchmark.db  main.c
src/: EZNP_ez_networking_protocol.txt  EZQL.txt  EZ_binary_table_format.txt  aes.rs  aes_temp_crypto.rs  auth.rs  basic_io_functions.rs  bloom_filter.rs  client_networking.rs  compression.rs  compression_opt.rs  db_structure.rs  diffie_hellman.rs  disk_utilities.rs  ezql.rs  handlers.rs  http_interface.rs  js_client.html  lib.rs  logger.rs  logging.rs  main.rs  networking_utilities.rs  noise.rs  query_execution.rs  row_arena.rs  row_table.rs  server_networking.rs  testing_tools.rs  thread_pool.rs  threadpool.rs  utilities.rs
test_files/: Products.csv  combined.csv  departments.csv  employees.csv  good_csv.txt  insert_me.csv  large.csv  large2.csv  products.csv  sorted1.csv  test_csv_from_google_sheets2_unsorted.csv  test_csv_from_google_sheets_combined_sorted_test_range.csv  test_csv_from_google_sheets_sorted.csv  test_csv_from_google_sheets_unsorted.csv
testlogs/: 22.8.2023 - 22;41;0.txt  4.9.2023 - 12;45;54.txt
testlogs1/: 22.8.2023 - 22;41;0.txt  4.9.2023 - 12;45;54.txt
utility_scripts/: make_large_csv  make_large_csv.py  make_large_csv.rs
