cargo-features = ["profile-rustflags"]

[package]
name = "EZDB"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easy little database"
homepage = "https://github.com/lord-hellgrim/EZDB"
repository = "https://github.com/lord-hellgrim/EZDB"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[profile.test] 
#opt-level = 3

[profile.release]
rustflags = ["-C", "target-cpu=native", "-C", "target-feature=+avx2"]

[dependencies]
aes-gcm = "0.10.2"
blake3 = "1.5.0"
fnv = "1.0.7"
rand = "0.8.5"
rayon = "1.8.0"
ron = "0.8.1"
rug = "1.22.0"
serde = { version = "1.0.192", features = ["derive", "alloc"] }
smartstring = { version = "1.0.1", features = ["serde"] }


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
