
[package]
name = "EZDB"
version = "0.1.13"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easy little database"
homepage = "https://github.com/lord-hellgrim/EZDB"
repository = "https://github.com/lord-hellgrim/EZDB"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
blake3 = "1.5.0"
brotli = "3.4.0"
fnv = "1.0.7"
miniz_oxide = "0.7.1"
# num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
# rayon = "1.8.0"
ron = "0.8.1"
serde = { version = "1.0.192", features = ["derive", "alloc"] }
smartstring = { version = "1.0.1", features = ["serde"] }
x25519-dalek = {version = "2.0.0", features = ["getrandom", "static_secrets"]}


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
